Fix Javadoc generation of this project