@@ -206,10 +206,16 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>3.2.0</version>
+					<version>3.6.0</version>
 					<configuration>
 						<doclint>none</doclint>
 						<useStandardDocletOptions>true</useStandardDocletOptions>
+						<additionalOptions>
+							<additionalOption>--add-exports</additionalOption>
+							<additionalOption>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</additionalOption>
+							<additionalOption>--add-exports</additionalOption>
+							<additionalOption>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</additionalOption>
+						</additionalOptions>
 					</configuration>
 					<executions>
 						<execution>
